# ml-intern

./: .gitignore  README.md  full_diff.txt  pyproject.toml
agent/: README.md  config.py  main.py
agent/context_manager/: manager.py
agent/core/: __init__.py  agent_loop.py  sdk_hooks.py  sdk_options.py  sdk_runner.py  sdk_tools.py  session.py
agent/prompts/: system_prompt.yaml
agent/tools/: dataset_tools.py  docs_tools.py  edit_utils.py  hf_repo_files_tool.py  hf_repo_git_tool.py  jobs_tool.py  local_tools.py  obsidian_kb_tool.py  obsidian_save_tool.py  research_tool.py  sandbox_client.py  sandbox_tool.py
agent/utils/: terminal_display.py
backend/: main.py  session_manager.py
backend/routes/: agent.py
configs/: main_agent_config.json
frontend/: package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/components/Chat/: ActivityStatusBar.tsx  ApprovalFlow.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/components/CodePanel/: CodePanel.tsx
frontend/src/components/Layout/: AppLayout.tsx
frontend/src/components/SessionSidebar/: SessionSidebar.tsx
frontend/src/hooks/: useAgentChat.ts  useAgentWebSocket.ts
frontend/src/store/: agentStore.ts  layoutStore.ts
frontend/src/types/: agent.ts
